conf-K8S/istio+flagger/model.yaml
apiVersion: v1
kind: Service
metadata:
  name: model
spec:
  selector:
    app: model
  ports:
  - port: 80
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model
  labels:
    app: model
spec:
  selector:
    matchLabels:
      app: model
  template:
    metadata:
      labels:
        app: model
    spec:
      containers:
      - name: model
        image: aymencherif/analyseur-sentiment-model:latest
        ports:
        - containerPort: 5000
